animation overhaul with inspiration from ionic

--- a/src/elsie.common/styles/action-bar.scss
+++ b/src/elsie.common/styles/action-bar.scss
@@ -3,7 +3,7 @@ md-toolbar.action-bar {
   top: $bump;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: $z-index-control-main;
   background-color: transparent;
   &.transparent {
     md-icon.md-default-theme {
