--- a/src/elsie.search/styles/search.scss
+++ b/src/elsie.search/styles/search.scss
@@ -10,7 +10,7 @@
     top: 23px;
     left: 60px;
     right: 20px;
-    z-index: 3;
+    z-index: $z-index-control-super;
   }
   input {
     width: 80%;
