--- a/src/elsie.common/styles/animations.scss
+++ b/src/elsie.common/styles/animations.scss
@@ -10,6 +10,8 @@
 [ui-view].ng-enter, [ui-view].ng-leave {
   -webkit-transition: all $transition;
   transition: all $transition;
+  -webkit-transition-delay: 0.01s;
+  transition-delay: 0.01s;
   @include transition-timing-function($transition-function);
 }
 
