session and auth implementation complete

--- a/src/elsie.common/styles/action-bar.scss
+++ b/src/elsie.common/styles/action-bar.scss
@@ -14,6 +14,7 @@ md-toolbar.action-bar {
     h2 {
       font-weight: 500;
       margin-left: 45px;
+      margin-top: -7px;
       opacity: 0;
       -webkit-transition: opacity $transition;
       transition: opacity $transition;
