--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -32,7 +32,7 @@ doctype
         .md-list-item-text
           p {{ product.description }}
       md-divider(ng-if="product.description && tags")
-      md-list-item
+      //md-list-item
         md-chips(ng-model="tags",readonly="true")
 
       
