--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -23,6 +23,13 @@ body {
   font-family: 'Roboto';
 }
 
+* {
+  &:not(input){
+    -webkit-user-select: none;
+    user-select: none;
+  }
+}
+
 #main {
   padding-top: $bump;
   overflow: hidden;
