--- a/src/elsie.common/templates/side-bar.jade
+++ b/src/elsie.common/templates/side-bar.jade
@@ -8,6 +8,6 @@ div
     md-list
       md-item
        md-item-content(md-ink-ripple,layout="row",layout-align="start center")
-        .inset
-          md-icon(md-svg-icon="img/power.svg")
+        //.inset
+          md-icon.md-primary menu
         .inset Logout
