--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -6,4 +6,4 @@ doctype
     md-tab(label='Cellar',md-on-select="changeTab('watchlist')")
       include watchlist.jade
   md-button.md-fab.fab-bottom-right.watchlist-fab(ng-click="go('search')",ng-class="{ 'state-home-explore' : currentTab === 'explore', 'state-home-watchlist' : currentTab === 'watchlist'}")
-    md-icon(md-svg-src="img/add.svg")
+    md-icon add
