--- a/src/elsie.splash/templates/login.jade
+++ b/src/elsie.splash/templates/login.jade
@@ -1,10 +1,10 @@
 .splash.login(layout="column")
   .container(layout="row", layout-align="center center")
-    .inside(flex="60",layout="column",layout-align="auto")
+    .inside(flex="75",layout="column",layout-align="auto")
       md-input-container.md-primary.md-default
         label Email address
         input(type="email",ng-model="user.email")
       md-input-container.md-primary.md-default
         label Password
         input(type="password",ng-model="user.password")
-      md-button.md-primary(ng-click="login()") Log in
+      md-button.md-primary.md-raised(ng-click="login()") Log in
