--- a/src/index.jade
+++ b/src/index.jade
@@ -13,16 +13,18 @@ html
     // Angular Material
     script(src="js/lib/angular-material.js",charset="utf-8")
     link(rel="stylesheet", href="css/lib/angular-material.css")
+    link(href="https://fonts.googleapis.com/icon?family=Material+Icons",rel="stylesheet")
     // Cordova 4.0.0
     script(src="cordova.js",charset="utf-8")
     // Elsie 2.0
+    script(src="js/templates.js",charset="utf-8")
     script(src="js/elsie.js",charset="utf-8")
     link(rel="stylesheet", href="css/app.css")
   body(ng-app="elsie")
     div(layout="column",layout-fill,ng-controller="AppCtrl")
-      md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id="menu",ng-if="priority > 1")
+      md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id="menu")
         div(side-bar)
       md-content#main
         .bar
-        div(action-bar,transparent="barTransparency()",set="barItems()",search="barSearch()",ng-if="priority > 0")
+        div(action-bar,transparent="barTransparency()",set="barItems()",search="barSearch()")
         div(ui-view,state-class)
