--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -7,7 +7,7 @@ $white: #FEFEFE;
 
 $bump: 24px;
 
-$transition: 0.35s;
+$transition: 0.25s;
 $transition-function: cubic-bezier(.36, .66, .04, 1) !default; // thanks, driftyco!
 
 $z-index-view-below: 10;
@@ -86,6 +86,10 @@ md-icon.md-default-theme {
 
 md-list-item > .md-avatar:first-child, md-list-item .md-list-item-inner > .md-avatar:first-child {
   height: auto;
+}
+
+md-list-item.md-2-line .md-list-item-text h3, md-list-item.md-2-line > .md-no-style .md-list-item-text h3, md-list-item.md-3-line .md-list-item-text h3, md-list-item.md-3-line > .md-no-style .md-list-item-text h3 {
+  line-height: 1.2em;
 }
 
 md-tabs {
