--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -74,6 +74,15 @@ button.md-button {
   }
   &.md-icon-button {
     margin: 0;
+    -webkit-transition: all 0.25s;
+    -webkit-transform: scale(1,1);
+    transition: all $transition;
+    transform: scale(1,1);
+    margin: 0;
+    &.invisible {
+      -webkit-transform: scale(0,0);
+      transform: scale(0,0);
+    }
   }
 }
 
