--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -1,6 +1,6 @@
 doctype
 .home
-  md-tabs.full.md-primary(md-selected="selectedIndex", md-no-pagination="true", md-stretch-tabs="always")
+  md-tabs.full.md-primary(md-selected="selectedIndex", md-no-pagination="true", md-stretch-tabs="always", md-no-ink="true")
     md-tab(label='Explore',md-on-select="changeTab('explore')")
       include explore.jade
     md-tab(label='Cellar',md-on-select="changeTab('watchlist')")
