--- a/src/index.jade
+++ b/src/index.jade
@@ -6,6 +6,7 @@ html
     title Elsie
     // Angular
     script(src="js/lib/angular.js",charset="utf-8")
+    script(src="js/lib/angular-issue-9128-patch.js",charset="utf-8")
     script(src="js/lib/angular-ui-router.js",charset="utf-8")
     script(src="js/lib/angular-animate.js",charset="utf-8")
     script(src="js/lib/angular-aria.js",charset="utf-8")
