--- a/src/elsie.search/styles/search.scss
+++ b/src/elsie.search/styles/search.scss
@@ -27,13 +27,20 @@
     float: left;
     height: 20px;
     line-height: 18px;
-    margin: 0;
     border-radius: 0;
     min-height: 0;
     padding: 0;
     display: block !important;
+    -webkit-transition: all 0.25s;
+    -webkit-transform: scale(0,0);
+    transform: scale(0,0);
+    transition: all $transition;
     md-icon {
-      color: $charcoal;
+      color: $purple;
+    }
+    &.visible {
+      -webkit-transform: scale(1,1);
+      transform: scale(1,1);
     }
   }
 }
