--- a/src/elsie.home/templates/explore.jade
+++ b/src/elsie.home/templates/explore.jade
@@ -1,19 +1,4 @@
 .explore(ng-controller="ExploreCtrl")
-  .feature
-    h5 Pick of the week
-    .pick(layout="row")
-      .image(ng-style="featuredStyle",flex="35")
-      div(flex="60")
-        h3 {{ featured.name }}
-        span.rating 
-          md-icon.material-icons.md-default-theme.md-accent(ng-repeat="star in getRating(featured.pick.rating) track by $index") star_rate
-        br
-        .buttons
-          md-button.md-primary.md-raised(ng-click="loadProduct(featured)")
-            span Find it
-            md-icon arrow_forward
-  h5 Past selections
-  .watchlist.carousel
-    .scroller
-      .product(ng-repeat="product in watchlist",ng-click="loadProduct(product)")
-        img(ng-src="{{ product.image_url }}")
+  //md-list
+    md-list-item.product(ng-repeat="product in picks",ng-click="loadProduct(product)")
+      img.md-avatar(ng-src="{{ product.image_url }}")
