--- a/src/elsie.splash/templates/signup.jade
+++ b/src/elsie.splash/templates/signup.jade
@@ -1,10 +1,10 @@
-.splash.login(layout="column")
-  .container(layout="row", layout-align="center center")
-    .inside(flex="75",layout="column",layout-align="auto")
-      md-input-container.md-primary.md-default
-        label Email address
-        input(type="email",ng-model="user.email")
-      md-input-container.md-primary.md-default
-        label Password
-        input(type="password",ng-model="user.password")
-      md-button.md-primary.md-raised(ng-click="login()") Sign up
+.splash.signup
+  .container(layout="row", layout-wrap, layout-align="start center")
+    md-input-container.md-primary.md-default(flex="70",flex-offset="15")
+      label Email address
+      input(type="email",ng-model="user.email")
+    md-input-container.md-primary.md-default(flex="70",flex-offset="15")
+      label Password
+      input(type="password",ng-model="user.password")
+    div(flex="100",layout="row",layout-align="center center")
+      md-button.md-primary.md-raised(ng-click="login()",flex="70") Sign up
