--- a/src/elsie.search/templates/search.jade
+++ b/src/elsie.search/templates/search.jade
@@ -5,17 +5,17 @@ doctype
     input(type="text",placeholder="Search stores",ng-model="query.store",ng-change="searchStores(query.store)",ng-model-options="{ debounce: 300 }",ng-if="results.mode === 'store'")
     md-button.md-icon-button.hide(ng-class="{ visible: results.mode === 'product' && query.product || results.mode === 'store' && query.store }",ng-click="clear()")
       md-icon close
-  md-tabs.full.no-bump(md-selected="selectedTab",md-no-pagination="true",md-stretch-tabs="always", md-no-ink="true")
-    md-tab(label="Products",md-on-select="results.mode = 'product'")
-      md-list
-        md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
-          img.md-avatar(ng-src="{{ product.image_thumb_url }}")
-          .md-list-item-text
-            h3 {{ product.name }}
-            p {{ product.producer_name }}
-    md-tab(label="Stores",md-on-select="results.mode = 'store'")
-      md-list
-        md-list-item.md-2-line(md-no-ink,ng-repeat="store in results.stores",ng-click="selectStore(store)")
-          .md-list-item-text
-            h3 &#35;{{ store.store_no }} {{ store.name }}
-            p {{ store.address_line_1 }}
+  //- md-tabs.full.no-bump(md-selected="selectedTab",md-no-pagination="true",md-stretch-tabs="always", md-no-ink="true")
+  //-   md-tab(label="Products",md-on-select="results.mode = 'product'")
+  //-     md-list
+  //-       md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
+  //-         img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+  //-         .md-list-item-text
+  //-           h3 {{ product.name }}
+  //-           p {{ product.producer_name }}
+  //-   md-tab(label="Stores",md-on-select="results.mode = 'store'")
+  //-     md-list
+  //-       md-list-item.md-2-line(md-no-ink,ng-repeat="store in results.stores",ng-click="selectStore(store)")
+  //-         .md-list-item-text
+  //-           h3 &#35;{{ store.store_no }} {{ store.name }}
+  //-           p {{ store.address_line_1 }}
