--- a/src/elsie.common/templates/action-bar.jade
+++ b/src/elsie.common/templates/action-bar.jade
@@ -6,6 +6,7 @@ md-toolbar.action-bar(ng-class="{ transparent: transparent, 'md-theme-search' : 
       md-icon arrow_back
     h2(ng-class="{ visible: set.title }",ng-hide="search")
       span(ng-if="set.title") {{ set.title }}
-      span(ng-if="!set.title") Elsie
+    md-button.md-icon-button.right-button(ng-click="go('watchlist')", ng-class="{ visible: set.watchlist }")
+      md-icon favorite
     md-button.md-icon-button.right-button(ng-click="go('search')", ng-class="{ visible: set.search }")
       md-icon search
