--- a/src/elsie.splash/styles/splash.scss
+++ b/src/elsie.splash/styles/splash.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
+  background-color: $grey-light;
   .overlay {
     background: url('../img/elsie.png') no-repeat;
     background-size: 175%;
