--- a/src/elsie.home/templates/master.jade
+++ b/src/elsie.home/templates/master.jade
@@ -1,8 +1,21 @@
 doctype
 .home
-  .search
-    .searchbox(ng-if="showSearch")
-      input(type="text",placeholder="Search products",ng-model="query.product",ng-change="searchProducts(query.product)",ng-model-options="{ debounce: 300 }",ng-if="results.mode === 'product'")
-      input(type="text",placeholder="Search stores",ng-model="query.store",ng-change="searchStores(query.store)",ng-model-options="{ debounce: 300 }",ng-if="results.mode === 'store'")
-      md-button.md-icon-button.hide(ng-class="{ visible: results.mode === 'product' && query.product || results.mode === 'store' && query.store }",ng-click="clear()")
-        md-icon close
+  .search(layout="column",layout-align="center center")
+    h2 Hi there.
+    input(type="text",placeholder="Search products and stores",ng-model="query.product",ng-change="search(query)",ng-model-options="{ debounce: 300 }",ng-if="results.mode === 'product'")
+    //- input(type="text",placeholder="Search stores",ng-model="query.store",ng-change="searchStores(query.store)",ng-model-options="{ debounce: 300 }",ng-if="results.mode === 'store'")
+    md-button.md-icon-button.hide(ng-class="{ visible: results.mode === 'product' && query.product || results.mode === 'store' && query.store }",ng-click="clear()")
+      md-icon close
+    h5 Hi there.
+
+    //- md-list
+    //-   md-list-item.md-2-line(md-no-ink,ng-repeat="product in results.products",ng-click="selectProduct(product)")
+    //-     img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+    //-     .md-list-item-text
+    //-       h3 {{ product.name }}
+    //-       p {{ product.producer_name }}
+    //- md-list
+    //-   md-list-item.md-2-line(md-no-ink,ng-repeat="store in results.stores",ng-click="selectStore(store)")
+    //-     .md-list-item-text
+    //-       h3 &#35;{{ store.store_no }} {{ store.name }}
+    //-       p {{ store.address_line_1 }}
