--- a/src/elsie.search/styles/search.scss
+++ b/src/elsie.search/styles/search.scss
@@ -4,23 +4,23 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: white;
+  background-color: $grey-light;
   .searchbox {
-    position: absolute;
-    top: 19px;
-    left: 60px;
-    right: 20px;
-    z-index: $z-index-control-super;
+    // position: absolute;
+    // top: 19px;
+    // left: 60px;
+    // right: 60px;
+    // z-index: $z-index-control-super;
   }
-  input {
-    width: 80%;
-    height: 100%;
-    font-size: 0.9em;
+  input[type="text"] {
     border: none;
-    outline: none;
-    color: $charcoal;
-    background-color: transparent;
-    float: left;
+    border-radius: 0;
+    -webkit-appearance: none;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+    font-size: 0.9em;
+    display: block;
+    padding: 10px 15px;
+    width: 85%;
   }
   .md-icon-button {
     width: 10%;
